--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="brand">
-            <img src="logo.png" alt="Delyn Store Logo" height="40">
+            <img src="RE-BRANDING.png" alt="Delyn Store Logo" height="40">
             <span>Delyn Store</span>
         </div>
     </header>
@@ -27,12 +27,12 @@
             </label>
             <div id="sourceDetails" style="display:none;">
                 <label>Masukkan jumlah kata / persen sumber yang ingin dikecualikan:
-                    <input type="text" name="sourceDetail" placeholder="Contoh: 10% atau 50 kata">
+                    <input type="text" name="sourceDetail" placeholder="Contoh: 1% atau 10 kata">
                 </label>
             </div>
 
             <label>No WhatsApp:
-                <input type="text" name="whatsapp" required placeholder="08xxxxxxxxxx">
+                <input type="text" name="whatsapp" required placeholder="628xxxxxxxxxx">
             </label>
 
             <button type="button" onclick="goToStep(2)">Pilih Pembayaran</button>
