--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <div id="paymentInfo" style="display:none;">
                 <p>Total: <strong>Rp2.500</strong></p>
-                <img src="qris.jpg" alt="QRIS" width="200">
+                <img src="QRIS DELYN STORE (1080 x 1080 piksel).png" alt="QRIS" width="200">
             </div>
 
             <label>Bukti Pembayaran:
