--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cek Plagiasi - DELYN STORE</title>
+  <title>Turnitin Plagiarism Check - DELYN STORE</title>
   <style>
     body,
     html {
@@ -15,7 +15,7 @@
     }
 
     .background {
-      background-image: url('background.jpg'); /* Ganti dengan nama file background */
+      background-image: url('Background.png'); /* Ganti dengan nama file background */
       background-size: cover;
       background-position: center;
       height: 100%;
@@ -85,7 +85,7 @@
 <body>
   <div class="background">
     <div class="form-container">
-      <h2 style="text-align: center;">Cek Plagiasi oleh Delyn Store</h2>
+      <h2 style="text-align: center;">Plagiarism Check by DELYN STORE</h2>
       <form id="plagiarismForm">
         <!-- Upload File -->
         <div class="form-group">
@@ -97,16 +97,16 @@
         <div class="form-group">
           <label>Pakai filter nggak bludss?</label>
           <div class="checkbox-group">
-            <label><input type="checkbox" name="filter" value="pustaka"> Ex-daftar pustaka</label><br />
-            <label><input type="checkbox" name="filter" value="kutipan"> Ex-kutipan</label><br />
-            <label><input type="checkbox" id="exSource"> Ex-source</label>
+            <label><input type="checkbox" name="filter" value="pustaka"> Kecualikan Daftar Pustaka</label><br />
+            <label><input type="checkbox" name="filter" value="kutipan"> Kecualikan Kutipkan</label><br />
+            <label><input type="checkbox" id="exSource"> Kecualikan Sumber (%/kata)</label>
           </div>
         </div>
 
         <!-- Input jika ex-source dicentang -->
         <div class="form-group" id="sourceInput" style="display: none;">
           <label for="sourceValue">Jumlah kata / persen yang ingin dikecualikan:</label>
-          <input type="text" id="sourceValue" name="sourceValue" placeholder="Contoh: 10 kata atau 5%" />
+          <input type="text" id="sourceValue" name="sourceValue" placeholder="Contoh: 10 kata atau 1%" />
         </div>
 
         <!-- WhatsApp -->
@@ -132,22 +132,22 @@
 
         <!-- Gambar QRIS -->
         <div class="qris" id="qrisContainer">
-          <img src="qris.jpg" alt="QRIS Pembayaran" style="max-width: 100%; border-radius: 8px;" />
+          <img src="QRIS DELYN STORE (1080 x 1080 piksel).png" alt="QRIS Pembayaran" style="max-width: 100%; border-radius: 8px;" />
         </div>
 
         <!-- Upload Bukti Pembayaran -->
         <div class="form-group">
-          <label for="paymentProof">Upload Bukti Pembayaran (gambar):</label>
+          <label for="paymentProof">Upload Bukti Pembayaran:</label>
           <input type="file" id="paymentProof" name="paymentProof" accept="image/*" required />
         </div>
 
         <!-- Terms & Conditions -->
         <p style="font-size: 14px; text-align: center;">
-          Dengan melanjutkan, Anda menyetujui <a href="https://sites.google.com/view/terms-and-conditions" target="_blank">Syarat & Ketentuan</a>.
+          Dengan melanjutkan, Anda menyetujui <a href="https://sites.google.com/view/delynstore/term-and-condition?authuser=0" target="_blank">terms & conditions</a>.
         </p>
 
         <!-- Tombol Proses -->
-        <button type="submit">Proses</button>
+        <button type="Proses">Proses</button>
       </form>
       <footer>
         &copy; 2025 Delyn Store. All rights reserved.
